--- a/app/src/main/res/layout/custom_info_window.xml
+++ b/app/src/main/res/layout/custom_info_window.xml
@@ -8,25 +8,32 @@
     tools:context="com.example.daniyar.kicb.MapsActivity">
 
 
+    <ImageView
+        android:id="@+id/logo_image_view"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />
+
     <TextView
         android:id="@+id/title_text_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="29dp"
         android:layout_marginTop="8dp"
-        android:textAlignment="center"
-        android:textStyle="bold"
+        android:text="TextView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/logo_image_view"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/snippet_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="TextView"
+        app:layout_constraintStart_toEndOf="@+id/logo_image_view"
         app:layout_constraintTop_toBottomOf="@+id/title_text_view" />
-
 </android.support.constraint.ConstraintLayout>
